--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li>or a state</li>
       </ul>
     </form>
-    <script>
+    <script src="./script.js"></script>
+<!--     <script>
       const endpoint =
         "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
 
@@ -73,6 +74,6 @@
 
       // keyup whenever you type
       // change event fires whenever you go off that input
-    </script>
+    </script> -->
   </body>
 </html>
